added video example.

--- a/guides/example.mdx
+++ b/guides/example.mdx
@@ -62,6 +62,17 @@ ___Bold and Italic___
 
 ![hackerlight](../assets/hackerlight.webp)
 
+## Videos
+
+Just paste your YouTube link directly:
+
+<YouTube url="https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
+
+Or use the video id if you prefer:
+
+<YouTube id="dQw4w9WgXcQ" />
+
+
 ---
 
 ## Blockquote
