--- a/guides/e2-visa-101.mdx
+++ b/guides/e2-visa-101.mdx
@@ -1,16 +1,13 @@
 ---
-
 title: How to get E2 Visa as a Startup Founder
 description: Scrappy guide for international founders using the E2 Investor Visa to launch in the US
 tags:
-
-* e2 visa
-* international founders
-* startup founders
-* investor visa
-* us immigration
-* treaty countries
-
+  - e2 visa
+  - international founders
+  - startup founders
+  - investor visa
+  - us immigration
+  - treaty countries
 ---
 
 ## 🔍 Overview
