--- a/guides/node-basics.mdx
+++ b/guides/node-basics.mdx
@@ -1,3 +1,13 @@
+---
+title: Node.js Basics 
+description: A guide to the basics of Node.js
+tags:
+  - node.js
+  - javascript
+  - programming
+  - web development
+---
+
 # Node.js Basics Guide
 
 ## What is Node.js?
