--- a/readme.mdx
+++ b/readme.mdx
@@ -1,3 +1,12 @@
-# yo
+# matt's digital brain dump 🧠💻
 
-This is a template for creating a college on homebrew.so
+welcome to my personal knowledge vault where i learn and dump it here for the world 🌍
+
+just a place where i document my journey through code, life, and random stuff that matters ⚡
+
+## what's in the vault:
+
+* **courses:** deep dives into programming and tech 🐍💡
+* **guides:** real-world hacks for everything from visa paperwork to proper deadlifting 💪🛠️
+
+dive in and level up your knowledge game 🚀
